Fixed bug where canvas wasn't covering the entire body.

--- a/ss.css
+++ b/ss.css
@@ -19,11 +19,20 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 
-body {
+html, body {
     background-color: #051d40;
     font-family:'Iceland';
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+#overlayHeading,
+#overlayHeading2,
+#Table,
+#slider1 {
+    position: relative; 
+    z-index: 1;         
 }
 
 #overlayHeading {
@@ -69,6 +78,12 @@ body {
 
 #mat {
     background-color: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    display: block;
+    z-index: 0;
+    pointer-events: none;
 }
